--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ configure(allprojects) { project ->
 
     dependencies {
         compile 'org.springframework:spring-context:4.2.3.RELEASE'
+        compile 'log4j:log4j:1.2.17'
 
         testCompile 'junit:junit:4.12'
         testCompile 'org.hamcrest:hamcrest-core:1.3'
