--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,2 +1,6 @@
 group 'linkviewer'
 version '1.0-SNAPSHOT'
+
+dependencies {
+    compile 'org.springframework.data:spring-data-mongodb:1.8.1.RELEASE'
+}
