--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,3 +4,10 @@ version '1.0-SNAPSHOT'
 dependencies {
     compile 'org.springframework.data:spring-data-mongodb:1.8.1.RELEASE'
 }
+
+task recreatMongoDb(type: JavaExec, description: '[Mongo] Recreates the Mongo DB.') {
+    dependsOn compileJava, processResources
+
+    main = 'meresti.linkviewer.core.tool.StoreInitializer'
+    classpath = sourceSets.main.runtimeClasspath
+}
