--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,14 @@ project(':core') {
     apply plugin: 'com.ewerk.gradle.plugins.querydsl'
 }
 
+project(':tools') {
+    apply plugin: 'java'
+
+    dependencies {
+        compile project(':core')
+    }
+}
+
 project(':ux') {
 
     def tomcatVersion = '7.0.59'
