--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ configure(allprojects) { project ->
 
     dependencies {
         compile 'org.springframework:spring-context:4.2.3.RELEASE'
+        compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.5'
         compile 'org.apache.logging.log4j:log4j-core:2.5'
         compile 'org.apache.logging.log4j:log4j-api:2.5'
         compile 'org.apache.logging.log4j:log4j-web:2.5'
