switch to BDRef to make the "join table" entity more usable

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ project(':ux') {
 
     dependencies {
         compile project(':core')
+
+        testCompile project(':mockito-extensions')
     }
 }
 
