--- a/ux/src/main/webapp/app/package.json
+++ b/ux/src/main/webapp/app/package.json
@@ -74,6 +74,8 @@
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "fetch": "github:github/fetch@^0.10.1",
       "font-awesome": "npm:font-awesome@^4.4.0",
+      "jquery": "npm:jquery@2.2.0",
+      "jstree": "npm:jstree@3.2.1",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {
